# keyrock_task

./: Cargo.toml  README.md
client/: Cargo.toml  build.rs
client/src/: main.rs
server/: Cargo.toml
server/src/: aggregator.rs  aggregator_grpc_server.rs  binance.rs  bitstamp.rs  main.rs  marketDataSourceContainer.rs  market_data_source.rs  market_data_source_container.rs  marketdatasource.rs  multi_receiver_channels.rs  order_book_snap.rs  utility.rs
