[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.9.2"
prost = "0.11.9"
tokio-stream = "0.1.14"
tokio = {version = "*", features = ["macros", "rt-multi-thread", "sync", "io-std"] }
tokio-tungstenite = {version = "*", features = ["native-tls"] }
prettytable-rs = "0.10.0"

[build-dependencies]
tonic-build = "0.9.2"