[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "*", features = ["macros", "rt-multi-thread", "sync", "io-std"] }
tokio-tungstenite = {version = "*", features = ["native-tls"] }
serde_json = "*"
url = "*"
futures-util = "*"
async-trait = "0.1.68"