[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "*", features = ["macros", "rt-multi-thread", "sync", "io-std"] }
tokio-tungstenite = {version = "*", features = ["native-tls"] }
tokio-stream = "0.1.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "*"
futures-util = "*"
async-trait = "0.1.68"
tonic = "0.9.2"
prost = "0.11.9"
log = { version = "0.4", features = ["std"] }
fast_log = "1.5.55"

[build-dependencies]
tonic-build = "0.9.2"